unpackaged/main/default/objects/ServiceCharge__c/ServiceCharge__c.object-meta.xml
<CustomObject>
    <description>Service charges object to store service charge records from Zoey</description>
    <label>Service Charge</label>
    <nameField>
        <label>Service Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>