unpackaged/main/default/objects/ServiceCharge__c/fields/BuyPrice__c.field-meta.xml
<CustomField>
    <fullName>BuyPrice__c</fullName>
    <description>Service Charge Buy Price - integrated with Zoey platform</description>
    <label>Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>