unpackaged/main/default/objects/ServiceCharge__c/fields/ChargeCode__c.field-meta.xml
<CustomField>
    <fullName>ChargeCode__c</fullName>
    <description>Charge code associated with the service charge - integrated with Zoey platform</description>
    <label>Charge Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>