unpackaged/main/default/objects/ServiceCharge__c/fields/ChargeGroupCode__c.field-meta.xml
<CustomField>
    <fullName>ChargeGroupCode__c</fullName>
    <description>Charge Group Code associated with the service charge - integrated with Zoey platform</description>
    <label>Charge Group Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>