unpackaged/main/default/objects/ServiceCharge__c/fields/ChargeGroupName__c.field-meta.xml
<CustomField>
    <fullName>ChargeGroupName__c</fullName>
    <description>Charge Group Name associated with the service charge - integrated with the Zoey platform</description>
    <label>Charge Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>