unpackaged/main/default/objects/ServiceCharge__c/fields/ChargeName__c.field-meta.xml
<CustomField>
    <fullName>ChargeName__c</fullName>
    <description>Charge Name associated with the service charge - integrated with Zoey platform</description>
    <label>Charge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>