unpackaged/main/default/objects/ServiceCharge__c/fields/cli__c.field-meta.xml
<CustomField>
    <fullName>cli__c</fullName>
    <description>cli related to the service charge - integrated with Zoey platform</description>
    <label>cli</label>
    <length>50</length>
    <type>Text</type>
</CustomField>