unpackaged/main/default/objects/ServiceCharge__c/fields/DefaultAmount__c.field-meta.xml
<CustomField>
    <fullName>DefaultAmount__c</fullName>
    <description>Service Charge Default Amount - integrated with Zoey platform</description>
    <label>Default Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>