unpackaged/main/default/objects/ServiceCharge__c/fields/FrequencyCode__c.field-meta.xml
<CustomField>
    <fullName>FrequencyCode__c</fullName>
    <description>Service Charge Frequency Code - integrated with Zoey platform</description>
    <label>Frequency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>