unpackaged/main/default/objects/ServiceCharge__c/fields/FrequencyName__c.field-meta.xml
<CustomField>
    <fullName>FrequencyName__c</fullName>
    <description>Service Charge Frequency Name - integrated with Zoey platform</description>
    <label>Frequency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>