unpackaged/main/default/objects/ServiceCharge__c/fields/NetworkName__c.field-meta.xml
<CustomField>
    <fullName>NetworkName__c</fullName>
    <description>Network Name associated with the service charge - integrated with the Zoey platform</description>
    <label>Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>