unpackaged/main/default/objects/ServiceCharge__c/fields/NominalCode__c.field-meta.xml
<CustomField>
    <fullName>NominalCode__c</fullName>
    <description>Nominal Code associated with the service charge - integrated with Zoey platform</description>
    <label>Nominal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>