unpackaged/main/default/objects/ServiceCharge__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service parent record of the service charge</description>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Service Charges</relationshipLabel>
    <relationshipName>ServiceCharges</relationshipName>
    <type>Lookup</type>
</CustomField>