unpackaged/main/default/objects/ServiceCharge__c/fields/ServiceChargeCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceChargeCode__c</fullName>
    <description>Zoey Service Charge Code</description>
    <externalId>true</externalId>
    <label>Service Charge Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>