unpackaged/main/default/objects/ServiceCharge__c/fields/ServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode__c</fullName>
    <description>Zoey Service Code</description>
    <label>Service Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>