unpackaged/main/default/objects/ServiceCharge__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>Date/Time record was updated on the Zoey platform</description>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>