unpackaged/main/default/objects/ServiceCharge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceChargeCode__c</columns>
    <columns>ServiceCode__c</columns>
    <columns>Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>